@@ -27,31 +27,22 @@ public class EventHubTriggerJava {
             List<Car> carDetails,
             @CosmosDBOutput(
                     name = "updatedCarDetails",
-                    databaseName = "CarFactory",
-                    collectionName = "DbContainer",
+                    databaseName = "az-car-db",
+                    collectionName = "az-car-collection",
                     connectionStringSetting = "ConnectionStringSetting",
                     createIfNotExists = true
             )
             OutputBinding<List<Car>> updatedCarDetails,
             final ExecutionContext context
     ) {
-        try {
-            List<Car> carDetailsList = new ArrayList<>();
-            carDetailsList = carDetails.stream()
-                    .map(details -> {
-                        context.getLogger().info("Car Data: " + details);
-                        Double updatedMileage = CarUtil.updateMileage(details.getMileage());
-                        Double updatedPrice = CarUtil.updatePrice(details.getPrice());
-                        details.setMileage(updatedMileage);
-                        details.setPrice(updatedPrice);
-                        context.getLogger().info("Transformed Car Data: " + details);
-                        details.setCarId(details.getCarId() + 1);
-                        return details;
-                    }).toList();
-            updatedCarDetails.setValue(carDetailsList);
-        } catch (Exception exception) {
-            context.getLogger().info(exception.getMessage());
-        }
+        context.getLogger().info("Java Event Hub trigger function executed.");
+        List<Car> collection = carDetails.stream()
+                .map(car -> {
+                    car.setMileage(CarUtil.updateMileage(car.getMileage()));
+                    car.setPrice(CarUtil.updatePrice(car.getPrice()));
+                    return car;
+                }).collect(Collectors.toList());
+        updatedCarDetails.setValue(collection);
     }
 
 
